--- a/templates/home.html
+++ b/templates/home.html
@@ -3,25 +3,20 @@
 	<h1>REIT API Documentation</h1>
 	<p>Here you will find information on consuming the REIT api.</p>
 		<br /> <br />
-		<h2>ADDING REITS</h2>
-		<b>POST /item<b> - Add a new REIT to our database!
-		<p>
-			<a href = "/enternew">Add New Record</a>
-		</p>
-		<br /> <br />
 		<h2>GETTING REITS</h2>
 		<b>GET /item</b> - Get all the REIT's from our database!<br />
 		<b>GET /item/&lt;id&gt;</b> - Get a specific ticker from our database!
 		<p>
-			<a href = "/item">Show List</a>
+			<a href = "/allReits">Show List</a>
 		</p>
-		<br /> <br />
-		<h2>DELETING REITS</h2>
-		<b>DELETE /item/&lt;id&gt;</b> - remove a specific ticker from our database
-		<p><a href = "/delete">Delete</a></p>
-	</p>	
-	
-	
+		
+		<h2>view REITS woth a look at</h2>
+		<b>GET /item/&lt;id&gt;</b> - Get a specific ticker from our database!
+		<p>
+			<a href = "/goodReits">Show List</a>
+		</p>
+		
+
       
    </body>
 </html>
